# readlif

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py
readlif/: __init__.py  _helpers.py  reader.py  utilities.py  utils.py
tests/: test.py
tests/tiff/: xem_y32.tif
